@@ -608,6 +608,7 @@
 	- added mrt_array and append_to_array() to common.c/.h
 	- added "noreturn" attribute to cleanup_and_exit() and removed unnecessary hack to silence compiler from main()
 	- added missing static to some global variables
+	- added option "no_execution" to perform testruns without executing the binaries
 	
 	create_report
 	- pass the file descriptor as parameter to PRINT_INFO
